# AI-agent-testing-platform

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEPLOYMENT-GUIDE.md  FEATURE-CHECKLIST.md  FRONTEND_COMPLETION_SUMMARY.md  INTEGRATION_SUMMARY.md  NAIVE-UI-MIGRATION-GUIDE.md  PROJECT-SUMMARY.md  QUICK_START_AI_TESTCASE.md  README.md  TEST_CASE_PROMPT.md  pyproject.toml  setup-naive-frontend.sh  start-full-project.sh  stop-project.sh  test-api-connection.sh  test-complete-features.sh  左岚团队提示词-完整版.md  左岚团队提示词-精简版.md
.claude/: .mcp.json  CLAUDE.md  (+3 more)
bigbear-code-generator/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
bigbear-code-generator/app/: main.py
bigbear-code-generator/app/api/v1/endpoints/: AuthController.py  DepartmentsController.py  GeneratorController.py  MenusController.py  RolesController.py  UsersController.py
bigbear-code-generator/app/config/: dev_settings.py  prod_settings.py
bigbear-code-generator/app/database/: init_data.py
bigbear-code-generator/app/dependencies/: dependencies.py
bigbear-code-generator/app/logger/: logger.py
bigbear-code-generator/app/models/: DeptModel.py  GenTable.py  RoleModel.py  __init__.py
bigbear-code-generator/app/responses/: resp_model.py
bigbear-code-generator/app/schemas/: DeptSchema.py  GeneratorSchema.py  LoginSchema.py  MenuSchema.py  RoleSchema.py  UserSchema.py
bigbear-code-generator/app/security/: JwtUtil.py
bigbear-code-generator/app/services/: DbMetaService.py  DeptService.py  GeneratorService.py  SqlParserService.py  UserService.py
bigbear-code-generator/app/templates/: BasePagination.vue.jinja2  BaseSearch.vue.jinja2  api.js.jinja2
bigbear-code-generator/app/utils/: data_scope.py  time_utils.py
bigbear-code-generator/web/: .env.development  .env.production  env-example.txt  jsconfig.json  pnpm-lock.yaml  vite.config.js
bigbear-code-generator/web/src/: App.vue  axios.js  main.js
bigbear-code-generator/web/src/components/BaseForm/: index.vue
bigbear-code-generator/web/src/components/BasePagination/: index.vue
bigbear-code-generator/web/src/components/GlobalLoading/: index.vue
bigbear-code-generator/web/src/config/: staticMenus.js
bigbear-code-generator/web/src/directives/: permission.js
bigbear-code-generator/web/src/router/: index.js
bigbear-code-generator/web/src/stores/: index.js  menu.js  user.js
bigbear-code-generator/web/src/utils/: dynamicRoute.js  performanceMonitor.js  timeFormatter.js
bigbear-code-generator/web/src/views/generator/code/: GeneratorCode.vue
bigbear-code-generator/web/src/views/generator/history/: GenHistory.vue
bigbear-code-generator/web/src/views/generator/table/: GenTableList.vue
bigbear-code-generator/web/src/views/home/: FBreadcrumb.vue  FMenu.vue  home.vue
bigbear-code-generator/web/src/views/login/: login.js  login.vue
bigbear-code-generator/web/src/views/statistics/: statistics.js  statistics.vue
bigbear-code-generator/web/src/views/system/dept/: dept.js
cyberpunk/: .dockerignore  .gitignore  Dockerfile  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.py
cyberpunk-backend/: .env  pyproject.toml
cyberpunk-backend/api_agent/: settings.py
cyberpunk-backend/api_agent/api/: documents.py
cyberpunk-backend/api_agent/db/: __init__.py
cyberpunk-backend/api_healer/: __init__.py  core.py
cyberpunk-backend/core/: api_parser.py  database_config.py  full_rag_engine.py  virtual_file_system.py
cyberpunk-backend/mcp_servers/: chart_server.py  rag_server.py
cyberpunk/app/: api_server.py
cyberpunk/app/api_agent/: __init__.py
cyberpunk/app/api_parser/: core.py
cyberpunk/app/core/: entity_extractor.py  multimodal_processor.py
cyberpunk/app/deep_agents/: __init__.py
cyberpunk/app/multimodal/: __init__.py  core.py
cyberpunk/app/rag/: core.py
cyberpunk/web/src/: App.tsx  index.css
cyberpunk/web/src/components/: Logo.tsx
cyberpunk/web/src/components/api-repository/: ApiDetail.tsx  ApiList.tsx  ApiTree.tsx  ImportApiModal.tsx  data.ts
cyberpunk/web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
cyberpunk/web/src/layouts/: DashboardLayout.tsx
cyberpunk/web/src/pages/: AgentWorkbench.tsx  ApiRepository.tsx  EnvironmentSettings.tsx  HomeOverview.tsx  Integrations.tsx  JobQueueHistory.tsx  KnowledgeGraphExplorer.tsx  LiveExecutionConsole.tsx  Login.tsx  PromptLibrary.tsx  QualityAnalyticsDashboard.tsx  RagChunkDebugger.tsx  RagKnowledgeBase.tsx  TeamPermissions.tsx  TestCaseManagement.tsx  TestRunReportDetail.tsx  TestSuiteOrchestration.tsx  UserProfileSettings.tsx  WorkspaceSelection.tsx
cyberpunk/web/src/theme/: antdTheme.ts
(+3525 files in other folders)
