[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberpunk-backend"
version = "0.1.0"
description = "AI-driven API automation testing platform with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AI Agent Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "mcp>=0.9.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.1",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "openai>=1.10.0",
    "anthropic>=0.18.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.22",
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.6",
    "playwright>=1.41.0",
    "requests>=2.31.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api_agent"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=api_agent --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
